Apply suggestions from code review
Fixing spelling mistakes and various code styling issues.

Co-authored-by: Arved Solth <solth@effective-webwork.de>